syntax = "proto3";

import "user_profile.proto";

package io.growing.tunnel.protocol;
option java_package = "io.growing.collector.tunnel.protocol";
option java_multiple_files = true;
option java_outer_classname = "UserProtocol";

message UserDto {
  string anonymous_id = 1;
  string project_key = 2;
  string user_id = 3;
  string gio_id = 4;
  int64 timestamp = 5;
  int32 esid = 6;
  string session = 7;
  UserProfileDto profile = 8;
  map<string, string> attributes = 9;
  int64 send_time = 10;
}

message UserList {
  repeated UserDto values = 1;
}